[gd_scene load_steps=4 format=3 uid="uid://br8qm13yce4pr"]

[ext_resource type="Script" path="res://src/dialogue/dialogue_ui.gd" id="1_28e40"]
[ext_resource type="PackedScene" uid="uid://b46vbuqx0s8a7" path="res://src/dialogue/fullscreen_dialogue.tscn" id="3_n472f"]
[ext_resource type="PackedScene" uid="uid://xgi8pcnjfsvh" path="res://src/dialogue/response_button.tscn" id="3_y57cq"]

[node name="DialogueUi" type="CanvasLayer" node_paths=PackedStringArray("display_timer", "response_box", "fullscreen_display")]
layer = 105
script = ExtResource("1_28e40")
display_timer = NodePath("DisplayTimer")
response_box = NodePath("ResponseBox")
fullscreen_display = NodePath("FullscreenDialogue")

[node name="DisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="ResponseBox" type="VBoxContainer" parent="."]
z_index = 91
custom_minimum_size = Vector2(700, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = 249.0
offset_right = 1051.0
offset_bottom = 673.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.490011, 0.490011)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="ResponseButton" parent="ResponseBox" instance=ExtResource("3_y57cq")]
layout_mode = 2

[node name="ResponseButton2" parent="ResponseBox" instance=ExtResource("3_y57cq")]
layout_mode = 2

[node name="ResponseButton3" parent="ResponseBox" instance=ExtResource("3_y57cq")]
layout_mode = 2

[node name="FullscreenDialogue" parent="." instance=ExtResource("3_n472f")]
